--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss",
+              "src/global.scss"
+            ],
             "scripts": [],
             "aot": false,
             "vendorChunk": true,
@@ -142,11 +145,22 @@
               "devServerTarget": "app:serve:ci"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "app:build:production",
+            "firebaseProject": "travel-app-v2-1f864",
+            "firebaseHostingSite": "travel-app-v2-1f864"
+          }
         }
       }
     }
   },
   "cli": {
+    "analytics": "5bff9840-b12e-41bf-894b-96cb54664ad0",
     "defaultCollection": "@ionic/angular-toolkit"
   },
   "schematics": {
